--- a/ep_dg_website/views/layout.xml
+++ b/ep_dg_website/views/layout.xml
@@ -117,7 +117,7 @@
                     </ul>
                 </li>
                 <li class="nav-item login-btn">
-                    <a href="/login">Log in / Sign in</a>
+                    <a href="/web/login">Log in / Sign in</a>
                 </li>
             </ul>
         </xpath>
